--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "firebase": "^9.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactfire": "^4.0.0-rc.2",
+    "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.14",
     "sweetalert2-react-content": "^5.0.0",
     "tslib": "^2.4.0",
